--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* General Styles */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -12,9 +11,10 @@ body {
     align-items: center;
     background-color: #fff;
     color: #000;
-    position: fixed; /* Fixa a barra no topo */
-    z-index: 1000; /* Mantém a navbar no topo de outros elementos */
-    width: 100%; /* Ocupa a largura total da tela */
+    position: fixed; 
+    z-index: 1000; 
+    width: 100%; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
   }
   
   .logo {
@@ -25,6 +25,8 @@ body {
   .navbar nav ul {
     list-style: none;
     display: flex;
+    margin: 0;
+    padding: 0;
   }
   
   .navbar nav ul li {
@@ -32,7 +34,7 @@ body {
   }
   
   .navbar nav ul li a {
-    color: #000000;
+    color: #000;
     text-decoration: none;
   }
   
@@ -60,14 +62,14 @@ body {
     margin-right: 30px;
   }
   
-  /* Intro Section */
   .intro-section {
-    background-image: url('templates/img\ fundo.jpg'); /* Background image for the intro section */
+    background-image: url('templates/img\ fundo.jpg'); 
     background-size: cover;
     background-position: center;
     color: #fff;
     padding: 50px 20px;
     height: 450px;
+    display:flex;
   }
   
   .intro-content h1{
@@ -85,14 +87,14 @@ body {
   .intro-content img{
     padding: 20px;
     margin-top: 60px;
+    max-width: 100%;
   }
   
-  /* Hero Section */
   .hero {
     background-color: #f9f9f9;
     background-size: cover;
     background-position: center;
-    height: 400px;
+    height: 60vh;
     display: flex;
     justify-content: center;
     color: #fff;
@@ -119,7 +121,6 @@ body {
     border-radius: 6px;
   }
   
-  /* Section Styles */
   section {
     padding: 50px 20px;
   }
@@ -208,5 +209,51 @@ body {
     display: flex;
     justify-content: center;
     gap: 20px;
+    flex-wrap: wrap;
   }
   
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    padding: 10px;
+  }
+  
+  .navbar nav ul {
+    flex-direction: column; 
+    align-items: center;
+  }
+
+  .navbar nav ul li {
+    margin: 5px 0;
+  }
+
+  .appointment-btn {
+    margin-top: 10px; 
+  }
+
+  .intro-content h1,
+  .hero-content h1,
+  .about-content h2,
+  .services-content h2,
+  .barbers-content h2,
+  .contact-content h2 {
+    font-size: 1.5em;
+  }
+  .intro-content p,
+  .hero-content p,
+  .about-content p,
+  .services-content p,
+  .barbers-content p,
+  .contact-content p {
+    font-size: 1em;
+  }
+
+  .intro-section, .hero, .about-section, .services-section, .barbers-section, .contact-section {
+    padding: 30px 15px;
+  }
+
+  .service-list, .barber-list {
+    flex-direction: column; /* Empilha os elementos em dispositivos móveis */
+    gap: 10px;
+  }
+}
